--- a/css/icon-font.css
+++ b/css/icon-font.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src: url('../fonts/icomoon.eot?ix3olj');
-  src: url('../fonts/icomoon.eot?ix3olj#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?ix3olj') format('truetype'),
-    url('../fonts/icomoon.woff?ix3olj') format('woff'),
-    url('../fonts/icomoon.svg?ix3olj#icomoon') format('svg');
+  src: url('../fonts/icomoon.eot?d2wn7m');
+  src: url('../fonts/icomoon.eot?d2wn7m#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?d2wn7m') format('truetype'),
+    url('../fonts/icomoon.woff?d2wn7m') format('woff'),
+    url('../fonts/icomoon.svg?d2wn7m#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -14,6 +14,7 @@
 [class*=' icon--']::before {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
+  display: inline-block;
   speak: never;
   font-style: normal;
   font-weight: normal;
@@ -26,13 +27,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon--arrow-right:before {
+.icon--arrow:before {
   content: '\e900';
-  color: inherit;
 }
-.icon--arrow-left:before {
+.icon--arrow-no-circle:before {
   content: '\e901';
-  color: inherit;
 }
-
-/* ============================= */
